--- a/homepage.html
+++ b/homepage.html
@@ -47,5 +47,13 @@
        </ul>
     </div>
     </div>
+    <div>
+        <ul class="footer">
+            <li><a href="https://www.linkedin.com/in/jack-rutland/" target="_blank" rel="noopener noreferrer"><img src="icons/linkedin.png"><br><p>LinkedIn</p></a></li>
+            <li><a href="https://github.com/Jack-Rutland" target="_blank" rel="noopener noreferrer"><img src="icons/github.png"><br><p>Github</p></a></li>
+            <li><a href="https://twitter.com/jackrrutland" target="_blank" rel="noopener noreferrer"><img src="icons/twitter.png"><br><p>Twitter</p></a></li>
+            <li><a href="mailto:jackrrutland@gmail.com" target="_blank" rel="noopener noreferrer"><img src="icons/email.png"><br><p>Email</p></a></li>
+        </ul>
+    </div>
 </body>
 </html>
