--- a/homepage.html
+++ b/homepage.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta charset='utf-8'>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Jack Rutland | Software Developer</title>
     <link rel="icon" href="images/logo.png">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
