--- a/homepage.html
+++ b/homepage.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Jack Rutland | Software Developer</title>
+    <meta name="description" content="Hey! My name is Jack Rutland. I am a web developer based in New York.
+                                      Click here too see more info!">
     <link rel="icon" href="images/logo.png">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'>
