--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=0.75">
     <meta charset='utf-8'>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
